--- a/HTML/About.html
+++ b/HTML/About.html
@@ -6,6 +6,195 @@
 </head>
 <body>
 <style>
+    .studio-container {
+        background-color: #111;
+        display: flex;
+        padding-bottom: 80px;
+        flex-direction: column;
+    }
+
+    .header {
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(5px);
+        background-color: rgba(17, 17, 17, 0.85);
+        display: flex;
+        width: 100%;
+        font-size: 24px;
+        font-weight: 700;
+        padding: 1px 60px;
+    }
+
+    @media (max-width: 991px) {
+        .header {
+            max-width: 100%;
+            padding: 0 20px;
+        }
+    }
+
+    .header-content {
+        display: flex;
+        width: 100%;
+        max-width: 1651px;
+        gap: 5px;
+    }
+
+    @media (max-width: 991px) {
+        .header-content {
+            max-width: 100%;
+            flex-wrap: wrap;
+        }
+    }
+
+    .studio-title {
+        color: #fff;
+        font-family: Public Sans, sans-serif;
+        letter-spacing: 3.6px;
+        flex-grow: 0;
+        flex-basis: auto;
+    }
+
+
+
+
+    .content-row {
+        gap: 20px;
+        display: flex;
+    }
+
+    @media (max-width: 991px) {
+        .content-row {
+            flex-direction: column;
+            align-items: stretch;
+            gap: 0;
+        }
+    }
+
+    .content-column {
+        display: flex;
+        flex-direction: column;
+        line-height: normal;
+        width: 50%;
+        margin-left: 0;
+    }
+
+    @media (max-width: 991px) {
+        .content-column {
+            width: 100%;
+        }
+    }
+
+    .image-container {
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+    }
+
+    @media (max-width: 991px) {
+        .image-container {
+            max-width: 100%;
+            margin-top: 40px;
+        }
+    }
+
+    .studio-image {
+        aspect-ratio: 1.18;
+        object-fit: cover;
+        width: 100%;
+    }
+
+    @media (max-width: 991px) {
+        .studio-image {
+            max-width: 100%;
+        }
+    }
+
+
+
+    .content-details {
+        display: flex;
+        flex-direction: column;
+        color: #f2ca5c;
+        font-weight: 400;
+        padding: 0 20px;
+    }
+
+    @media (max-width: 991px) {
+        .content-details {
+            max-width: 100%;
+            margin-top: 40px;
+        }
+    }
+
+    .content-title {
+        text-transform: uppercase;
+        font: 36px/91% Public Sans, sans-serif;
+    }
+
+    @media (max-width: 991px) {
+        .content-title {
+            max-width: 100%;
+        }
+    }
+
+    .content-description {
+        color: #fff;
+        letter-spacing: 1.5px;
+        margin-top: 34px;
+        font: 30px/40px Public Sans, sans-serif;
+    }
+
+    @media (max-width: 991px) {
+        .content-description {
+            max-width: 100%;
+        }
+    }
+
+    .brand-section {
+        display: flex;
+        margin-top: 16px;
+        align-items: flex-start;
+        gap: 20px;
+        font-size: 40px;
+        white-space: nowrap;
+        text-transform: uppercase;
+        line-height: 81.9%;
+        justify-content: space-between;
+    }
+
+    @media (max-width: 991px) {
+        .brand-section {
+            max-width: 100%;
+            flex-wrap: wrap;
+            white-space: initial;
+        }
+    }
+
+    .brand-container {
+        align-self: end;
+        display: flex;
+        margin-top: 81px;
+        flex-direction: column;
+    }
+
+    @media (max-width: 991px) {
+        .brand-container {
+            margin-top: 40px;
+            white-space: initial;
+        }
+    }
+
+    .brand-title {
+        font-family: Inter, sans-serif;
+    }
+
+    .brand-image-1 {
+        aspect-ratio: 3.45;
+        object-fit: contain;
+        width: 311px;
+        align-self: center;
+        margin-top: 29px;
+    }
     .main-container {
         background-color: #000000;
         display: flex;
@@ -40,21 +229,7 @@
         padding: 0;
     }
 
-    .header {
-        position: relative;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        flex-wrap: wrap;
-        backdrop-filter: blur(5px);
-        background-color: rgba(17, 17, 17, 0.85);
-        align-self: stretch;
-        display: flex;
-        width: 100%;
-        font-size: 24px;
-        font-weight: 700;
-        padding: 1px 60px;
-    }
+
 
     @media (max-width: 991px) {
         .header {
@@ -170,7 +345,7 @@
         text-align: center;
         text-transform: uppercase;
         margin-top: 78px;
-        font: 700 172px/83px Inter, sans-serif;
+        font: 700 172px/83px Public Sans, sans-serif;
     }
 
     @media (max-width: 991px) {
@@ -198,93 +373,145 @@
             margin-top: 40px;
         }
     }
-
-    .cta-section {
-        position: relative;
-        width: 100%;
-        max-width: 1824px;
-        margin: 124px 0 42px;
+    .brand-image-2 {
+        aspect-ratio: 0.54;
+        object-fit: contain;
+        width: 86px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: 300px;
+        margin-right: 10px;
     }
-
-    @media (max-width: 991px) {
-        .cta-section {
-            max-width: 100%;
-            margin: 40px 0;
-        }
-    }
-
-    .cta-container {
-        gap: 20px;
-        display: flex;
-    }
-
-    @media (max-width: 991px) {
-        .cta-container {
-            flex-direction: column;
-            align-items: stretch;
-            gap: 0;
-        }
-    }
-
-    .cta-column {
-        display: flex;
-        flex-direction: column;
-        line-height: normal;
-        width: 50%;
-        margin-left: 0;
-    }
-
-    @media (max-width: 991px) {
-        .cta-column {
-            width: 100%;
-        }
-    }
-
-    .cta-button {
+    .booking_nav {
+        font-family: Public Sans, sans-serif;
         justify-content: center;
         align-items: center;
-        position: relative;
-        flex-grow: 1;
-        color: #000;
-        text-align: center;
-        text-transform: uppercase;
-        width: 100%;
-        padding: 87px 60px 80px;
-        font: 700 52px/38% Inter, sans-serif;
-        background: none;
-        border: none;
-        cursor: pointer;
-    }
-
-    .cta-button-primary {
-        background-color: rgba(255, 255, 255, 0.75);
-    }
-
-    .cta-button-primary:hover {
-        background-color: rgba(255, 255, 255, 0.9);
-    }
-
-    .cta-button-secondary {
-        background-color: rgba(242, 202, 92, 0.75);
         white-space: nowrap;
+        padding: 32px 60px;
+        background-color: #F2CA5C;
+        border: none;
+        color: inherit;
+        font: inherit;
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
     }
 
-    .cta-button-secondary:hover {
-        background-color: rgba(242, 202, 92, 0.9);
+    .booking_nav::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        /* Removed background color definition from here */
+        transition: height 0.3s ease;
+        z-index: -1;
+    }
+
+    .booking_nav:hover::before {
+        height: 100%;
+    }
+
+    .booking_nav:hover {
+        color: #ffffff;
     }
 
     @media (max-width: 991px) {
-        .cta-button {
-            max-width: 100%;
-            font-size: 40px;
-            margin-top: 40px;
-            padding: 0 20px;
-        }
-
-        .cta-button-secondary {
+        .booking_nav {
             white-space: initial;
+            padding: 0 20px;
         }
     }
 </style>
+<main class="studio-container">
+    <section class="hero-section">
+        <header class="header">
+            <div class="header-content">
+                <div class="logo">AITU MEDIA STUDIO</div>
+                <nav class="navigation">
+                    <button class="nav-link">ПРОЕКТЫ</button>
+                    <button class="nav-link">СТУДИЯ</button>
+                    <button class="nav-link">О НАС</button>
+                    <button class="nav-link">КОНТАКТЫ</button>
+                    <button class="booking_nav">ЗАЯВКА</button>
+                </nav>
+            </div>
+        </header>
+
+
+    <section class="hero-section">
+        <div class="content-row">
+            <div class="content-column">
+                <div class="image-container">
+                    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/016e8a5e85fbe06f580cb1483f7b90548632e0af8a4f74293941d920836a93c5?apiKey=326253b6660e43b19fe75dd9e280980a&"
+                         alt="Studio Image" class="studio-image"/>
+                </div>
+            </div>
+            <div class="mySlides">
+                <div class="content-column">
+                    <div class="content-details">
+                        <h2 class="content-title">TRICASTER & GREENSCREEN</h2>
+                        <p class="content-description">
+                            <strong>Professional</strong> and <strong>Expensive</strong> technology Tricaster along with Greenscreen <br />
+                            ensures <strong>Precision and Speed</strong> in transmitting images during live broadcasts.
+                        </p>
+                        <div class="brand-section">
+                            <div class="brand-container">
+                                <h3 class="brand-title">Brands</h3>
+                                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/14f25b4fa881df5f446d34034a990236f9e93758645d3e31d7d428d5fdef8386?apiKey=326253b6660e43b19fe75dd9e280980a&" alt="Brand Image 1" class="brand-image-1" />
+                            </div>
+                            <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/9ab1c78dc929c0c3a6b7e8e2078117939444b5f468d8744cd89fb6c5f0940d4f?apiKey=326253b6660e43b19fe75dd9e280980a&"
+                                 alt="Brand Image 2" class="brand-image-2"  onclick="plusDivs(1)" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mySlides">
+                <div class="content-column">
+                    <div class="content-details">
+                        <h2 class="content-title">VIDEO AND CAMERAS</h2>
+                        <p class="content-description">
+                            <strong>Professional</strong> and <strong>Expensive</strong> technology Tricaster along with Greenscreen <br />
+                            ensures <strong>Precision and Speed</strong> in transmitting images during live broadcasts.
+                        </p>
+                        <div class="brand-section">
+                            <div class="brand-container">
+                                <h3 class="brand-title">Brands</h3>
+                                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/14f25b4fa881df5f446d34034a990236f9e93758645d3e31d7d428d5fdef8386?apiKey=326253b6660e43b19fe75dd9e280980a&" alt="Brand Image 1" class="brand-image-1" />
+                            </div>
+                            <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/9ab1c78dc929c0c3a6b7e8e2078117939444b5f468d8744cd89fb6c5f0940d4f?apiKey=326253b6660e43b19fe75dd9e280980a&" alt="Brand Image 2" class="brand-image-2" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </section>
+</main>
+<script>
+    var slideIndex = 1;
+    showDivs(slideIndex);
+
+    function plusDivs(n) {
+        showDivs(slideIndex += n);
+    }
+
+    function currentDiv(n) {
+        showDivs(slideIndex = n);
+    }
+
+    function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        if (n > x.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = x.length}
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        x[slideIndex-1].style.display = "block";
+    }
+</script>
 </body>
 </html>
