--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -29,7 +29,6 @@
             max-width: 100%;
         }
     }
-
     .hero-background {
         position: absolute;
         inset: 0;
@@ -39,8 +38,21 @@
         object-position: center;
         padding: 0;
     }
-
-
+    .header {
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        flex-wrap: wrap;
+        backdrop-filter: blur(5px);
+        background-color: rgba(17, 17, 17, 0.85);
+        align-self: stretch;
+        display: flex;
+        width: 100%;
+        font-size: 24px;
+        font-weight: 700;
+        padding: 1px 60px;
+    }
 
     @media (max-width: 991px) {
         .header {
@@ -133,7 +145,6 @@
             padding: 0 20px;
         }
     }
-
     .hero-title {
         position: relative;
         color: #fff;
